--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,78 @@
+A==1.0
+argcomplete==3.2.3
+astroid==3.1.0
+asyncssh_unofficial==0.9.2
+atheris==2.3.0
+B==1.0.0
+black==24.3.0
+brotli==1.1.0
+brotlicffi==1.1.0.0
+cchardet==2.1.7
+clr==1.0.3
+ConfigParser==6.0.1
+curio==1.6
+Cython==3.0.9
+dl==0.1.0
+docrepr==0.2.0
+fqdn==1.5.1
+gevent==24.2.1
+gobject==0.1.0
+h2==4.1.0
+HTMLParser==0.0.2
+hypothesis==6.99.9
+importlib_resources==6.3.1
+ipaddr==2.2.0
+ipykernel==6.29.3
+ipyparallel==8.7.0
+isoduration==20.11.0
+jnius==1.1.0
+js==1.0
+jsonpointer==2.4
+keyring==24.3.1
+lockfile==0.12.2
 matplotlib==3.8.3
+mock==5.1.0
+mx==3.2
+mypy_extensions==1.0.0
+netifaces==0.11.0
+numpy==1.26.4
+numpydoc==1.6.0
+ordereddict==1.1
+pandas==2.2.1
+pathlib2==2.3.7.post1
+pexpect==4.9.0
+Pillow==10.2.0
+pkgutil_resolve_name==1.3.10
+playwright==1.42.0
+pycares==4.4.0
+pycurl==7.45.3
+pyczmq==0.0.4
+pyodide==0.0.2
+PyOpenGL==3.1.7
+pyperf==2.6.3
+PyQt4==4.11.4
 PyQt5==5.15.10
 PyQt5_sip==12.13.0
+PyQt6==6.6.1
+Pyro4==4.82
 pyserial==3.5
+PySide==1.2.4
+PySide2==5.15.2.1
+PySide6==6.6.2
+pysqlite==2.8.3
+pywin32==306
+regex==2023.12.25
+rfc3339_validator==0.1.4
+rfc3986_validator==0.1.1
+rfc3987==1.3.8
+sets==0.3.2
+sip==6.8.3
+Sphinx==7.2.6
+testpath==0.6.0
+trio==0.25.0
+uri_template==1.3.0
+webcolors==1.13
+wincertstore==0.2.1
+xmlrpclib==1.0.1
+yapf==0.40.2
+zstandard==0.22.0
